# zama-and-seal-performance-testing

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  Makefile  readme.md
scripts/: formatCode.sh  genRandomLargeData.bash
src/: CMakeLists.txt  fileProcessingHelpers.cpp  fileProcessingHelpers.hpp  gptZamaPackingExample.cpp.old  main.cpp  seal.cpp  seal.hpp  seal_bfv.cpp  seal_bgv.cpp  testRunnerSeal.cpp  testRunnerSeal.hpp  testRunnerZama.cpp  testRunnerZama.hpp  testTimer.cpp  testTimer.hpp  zama.cpp  zama.hpp  zamaPacking.cpp.old
test_results/: first-bulk-test-needs-param-fixing.txt  zama-tests-1k-32bit-in-64bit-with-mult-op-next.txt  zama-tests-1k-64bit-in-64bit-op-next.txt
test_results/badAttempts/: bad-zama-tests-1k-32bit-in-64bit-with-mult-op-next.txt  zama-tests-1k-32bit-in-64bit-op-next.txt  zama-tests-1k-32bit-in-64bit-self-op.txt  zama-tests-1k-64bit-in-64bit-no-print.txt  zama-tests-1k-64bit-in-64bit-space.txt
